--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
 body {
     padding:40px;
 }
-.hero-unit {
-    height:900px;
+.navbar-inner {
+    display:inline;
+}
+.navbar-inner a {
+    padding-left:10px;
+    padding-right:10px;
+}
+.navbar img {
+    margin-right:0 auto;
 }
 .carousel-item-primary {
     background:url("images/thomas-park-P9y0G14Z7wA-unsplash.jpg");
@@ -10,4 +17,11 @@ body {
     background-repeat:no-repeat;
     background-position-y:bottom;
     height:400px;
+}
+.heroNav h1 {
+    text-align:center;
+}
+.heroNav h2 {
+    text-align:center;
+    padding-bottom:20px;
 }
